<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:enabled="true"
        android:title="@string/menu_home"
        android:icon="@drawable/menu_selector_home"/>
    <item
        android:id="@+id/searchFragment"
        android:enabled="true"
        android:title="@string/menu_search"
        android:icon="@drawable/menu_selector_search"/>
    <item
        android:id="@+id/comparisonFragment"
        android:enabled="true"
        android:title="@string/menu_comparison"
        android:icon="@drawable/menu_selector_compare"/>
    <item
        android:id="@+id/mypageFragment"
        android:enabled="true"
        android:title="@string/menu_mypage"
        android:icon="@drawable/menu_selector_mypage"/>
</menu>
