<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="380dp"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <ImageView
            android:id="@+id/dialog_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_bottom_sheet_icon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/dialog_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/price"
            android:textColor="@color/normal"
            android:textStyle="bold"
            android:layout_marginTop="14dp"
            app:layout_constraintTop_toBottomOf="@id/dialog_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageButton
            android:id="@+id/dialog_close_ib"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:scaleType="center"
            android:src="@drawable/close_icon"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@android:color/transparent"
            app:layout_constraintTop_toTopOf="@id/dialog_title_tv"
            app:layout_constraintBottom_toBottomOf="@id/dialog_title_tv"
            app:layout_constraintEnd_toEndOf="parent"/>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/dialog_price_1_down_btn"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="24dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:background="@drawable/style_detailed_category_button"
            android:text="@string/price_1_down"
            android:textColor="@color/subText"
            style="?android:attr/borderlessButtonStyle"
            app:layout_constraintTop_toBottomOf="@id/dialog_title_tv"
            app:layout_constraintEnd_toStartOf="@id/dialog_price_1_to_5_btn"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/dialog_price_1_to_5_btn"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:background="@drawable/style_detailed_category_button"
            android:text="@string/price_1_to_5"
            android:textColor="@color/subText"
            style="?android:attr/borderlessButtonStyle"
            app:layout_constraintTop_toTopOf="@id/dialog_price_1_down_btn"
            app:layout_constraintEnd_toStartOf="@id/dialog_price_5_to_10_btn"
            app:layout_constraintStart_toEndOf="@+id/dialog_price_1_down_btn"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/dialog_price_5_to_10_btn"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginEnd="12dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:background="@drawable/style_detailed_category_button"
            android:text="@string/price_5_to_10"
            android:textColor="@color/subText"
            style="?android:attr/borderlessButtonStyle"
            app:layout_constraintTop_toTopOf="@id/dialog_price_1_down_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/dialog_price_1_to_5_btn"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/dialog_price_10_up_btn"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginTop="24dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:background="@drawable/style_detailed_category_button"
            android:text="@string/price_10_up"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="@color/subText"
            app:layout_constraintTop_toBottomOf="@id/dialog_price_1_down_btn"
            app:layout_constraintStart_toStartOf="@id/dialog_price_1_down_btn"/>

        <!--        <Button-->
        <!--            android:id="@+id/dialog_screensize_apply_btn"-->
        <!--            android:layout_width="240dp"-->
        <!--            android:layout_height="48dp"-->
        <!--            android:layout_marginTop="42dp"-->
        <!--            app:layout_constraintTop_toBottomOf="@id/dialog_screensize_13inches_btn"-->
        <!--            android:text="@string/apply_btn"-->
        <!--            android:textColor="@color/outline"-->
        <!--            android:backgroundTint="@color/background"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"/>-->

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
